fix modalwindow contrast

--- a/Frontend/src/testPage/workMotivationTest/assets/modalWindow.css
+++ b/Frontend/src/testPage/workMotivationTest/assets/modalWindow.css
@@ -33,7 +33,7 @@
     bottom: 0;
     right: 0;
     transition: 200ms ease-in-out;
-    opacity: 0;
+    opacity: 1;
     z-index: 10;
 
     pointer-events: none;
